Fix connect to database

--- a/save_db_service/.env
+++ b/save_db_service/.env
@@ -1,1 +1,1 @@
-DATABASE_URL=mongodb+srv://iot:cuongtruonggiangdinhquan@cluster0.upoql.mongodb.net/iot?retryWrites=true&w=majority
+DATABASE_URL=mongodb+srv://iot:iot07@cluster0.8k1wz.mongodb.net/iot?retryWrites=true&w=majority
