--- a/save_db_service/package.json
+++ b/save_db_service/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "mongoose": "^5.10.11",
     "mqtt": "^4.2.4"
   },
