--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
 PORT=4000
-DATABASE_URL=mongodb+srv://iot:cuongtruonggiangdinhquan@cluster0.upoql.mongodb.net/iot?retryWrites=true&w=majority
+DATABASE_URL=mongodb+srv://iot:iot07@cluster0.8k1wz.mongodb.net/iot?retryWrites=true&w=majority
 TOKEN_SECRET=iot_cuong_truong_giang_dinh_quan
