--- a/web_client/package.json
+++ b/web_client/package.json
@@ -44,6 +44,7 @@
     ]
   },
   "devDependencies": {
-    "prettier": "^2.2.1"
+    "prettier": "^2.2.1",
+    "redux-devtools-extension": "^2.13.8"
   }
 }
