--- a/web_client/package.json
+++ b/web_client/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/charts": "^1.0.10",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.1",
     "@testing-library/user-event": "^12.2.2",
     "antd": "^4.8.4",
     "axios": "^0.21.0",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
     "mqtt": "^4.2.6",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
