--- a/web_client/package.json
+++ b/web_client/package.json
@@ -9,11 +9,13 @@
     "@testing-library/user-event": "^12.2.2",
     "antd": "^4.8.4",
     "axios": "^0.21.0",
+    "chart.js": "^2.9.4",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
     "mqtt": "^4.2.6",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
+    "react-chartjs-2": "^2.11.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
