add .evn edit ws mqtt

--- a/web_client/package.json
+++ b/web_client/package.json
@@ -10,6 +10,7 @@
     "antd": "^4.8.4",
     "axios": "^0.21.0",
     "chart.js": "^2.9.4",
+    "dotenv": "^8.2.0",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
     "mqtt": "^4.2.6",
