--- a/save_db_service/package.json
+++ b/save_db_service/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "mqttws": "node ./src/mqtt-to-ws.js",
+    "mqttsavedb": "node ./src/mqtt-saveto-db.js",
     "start": "nodemon --inspect index.js"
   },
   "keywords": [],
