--- a/save_db_service/package.json
+++ b/save_db_service/package.json
@@ -7,6 +7,7 @@
     "mqttws": "node ./src/mqtt-to-ws.js",
     "mqttsavedb": "node ./src/mqtt-saveto-db.js",
     "test": "node ./src/test.js",
+    "test2": "node ./src/test2.js",
     "start": "nodemon --inspect index.js"
   },
   "keywords": [],
